--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "test",
   "main": "index.js",
   "scripts": {
+    "start": "node ./server/server.js",
     "dev": "webpack-dev-server --progress --host 10.2.99.156 --config webpack.config.dev.js",
     "build": "webpack --config webpack.config.build.js"
   },
@@ -44,8 +45,10 @@
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
     "url-loader": "^1.1.2",
+    "vant": "^1.5.2",
     "vue": "^2.5.17",
     "vue-loader": "^15.4.2",
+    "vue-navigation": "^1.1.4",
     "vue-router": "^3.0.2",
     "vue-template-compiler": "^2.5.17",
     "vuex": "^3.0.1",
