--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node ./server/server.js",
-    "dev": "webpack-dev-server --progress --host 10.2.99.156 --config webpack.config.dev.js",
+    "dev": "webpack-dev-server --progress --config webpack.config.dev.js",
     "build": "webpack --config webpack.config.build.js"
   },
   "repository": {
@@ -30,6 +30,7 @@
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "file-loader": "^2.0.0",
     "html-webpack-plugin": "^3.2.0",
+    "http-proxy": "^1.17.0",
     "ioredis": "^4.2.0",
     "koa": "^2.6.2",
     "koa-logger": "^3.2.0",
@@ -44,6 +45,7 @@
     "passport-local": "^1.0.0",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
+    "svg-captcha": "^1.3.12",
     "url-loader": "^1.1.2",
     "vant": "^1.5.2",
     "vue": "^2.5.17",
