--- a/package.json
+++ b/package.json
@@ -30,11 +30,11 @@
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "file-loader": "^2.0.0",
     "html-webpack-plugin": "^3.2.0",
-    "http-proxy": "^1.17.0",
     "ioredis": "^4.2.0",
     "koa": "^2.6.2",
     "koa-logger": "^3.2.0",
     "koa-passport": "^4.1.1",
+    "koa-proxy2": "^0.11.0",
     "koa-router": "^7.4.0",
     "koa-session2": "^2.2.8",
     "koa-static": "^5.0.0",
@@ -42,7 +42,6 @@
     "mongoose": "^5.3.14",
     "monk": "^6.0.6",
     "node-sass": "^4.10.0",
-    "passport-local": "^1.0.0",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
     "svg-captcha": "^1.3.12",
