--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "html-webpack-plugin": "^3.2.0",
     "ioredis": "^4.2.0",
     "koa": "^2.6.2",
+    "koa-bodyparser": "^4.2.1",
     "koa-logger": "^3.2.0",
     "koa-passport": "^4.1.1",
     "koa-proxy2": "^0.11.0",
